--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -19,12 +19,17 @@ builds:
       - 7
     binary: dns-mokka
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+  - format_overrides:
+      - goos: windows
+        format: zip
+    name_template: >-
+      {{ .ProjectName }}_
+      {{- .Version }}_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}
 dockers:
 - image_templates:
   - "ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}-amd64"
