--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,9 +32,9 @@ jobs:
         run: git fetch --force --tags
       
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.18
+          go-version-file: go.mod
       
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
