--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,9 +1,7 @@
 project_name: dns-mokka
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
     - go generate ./...
 builds:
   - env:
@@ -30,49 +28,16 @@ archives:
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
       {{- if .Arm }}v{{ .Arm }}{{ end }}
-dockers:
-- image_templates:
-  - "ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}-amd64"
-  use: buildx
-  dockerfile: Dockerfile
-  build_flag_templates:
-  - "--platform=linux/amd64"
-- image_templates:
-  - "ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}-arm64v8"
-  use: buildx
-  goarch: arm64
-  dockerfile: Dockerfile
-  build_flag_templates:
-  - "--platform=linux/arm64/v8"
-- image_templates:
-  - "ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}-armv6"
-  use: buildx
-  goarch: arm
-  goarm: 6
-  dockerfile: Dockerfile
-  build_flag_templates:
-  - "--platform=linux/arm/v6"  
-- image_templates:
-  - "ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}-armv7"
-  use: buildx
-  goarch: arm
-  goarm: 7
-  dockerfile: Dockerfile
-  build_flag_templates:
-  - "--platform=linux/arm/v7"    
-docker_manifests:
-- name_template: ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}
-  image_templates:
-  - ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}-amd64
-  - ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}-arm64v8
-  - ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}-armv6
-  - ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}-armv7
-- name_template: ghcr.io/0xerr0r/{{ .ProjectName }}:latest
-  image_templates:
-    - ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}-amd64
-    - ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}-arm64v8
-    - ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}-armv6
-    - ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}-armv7
+dockers_v2:
+  - images:
+      - "ghcr.io/0xerr0r/{{ .ProjectName }}:{{ .Version }}"
+      - "ghcr.io/0xerr0r/{{ .ProjectName }}:latest"
+    dockerfile: Dockerfile
+    platform:
+      - linux/amd64
+      - linux/arm64
+      - linux/arm/v6
+      - linux/arm/v7
 checksum:
   name_template: 'checksums.txt'
 snapshot:
