--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,6 +8,9 @@ on:
 
 permissions:
   contents: write
+  packages: write
+  issues: write
+  id-token: write
 
 jobs:
   goreleaser:
@@ -26,7 +29,7 @@ jobs:
         with:
           registry: ghcr.io
           username: 0xerr0r
-          password: ${{ secrets.GH_PAT }}        
+          password: ${{ secrets.GITHUB_TOKEN }}        
       
       - name: Fetch all tags
         run: git fetch --force --tags
