--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,7 +4,7 @@ on:
   push:
     # run only against tags
     tags:
-      - '*'
+      - "*"
 
 permissions:
   contents: write
@@ -20,25 +20,28 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      
+
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Docker Login
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: 0xerr0r
-          password: ${{ secrets.GITHUB_TOKEN }}        
-      
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Fetch all tags
         run: git fetch --force --tags
-      
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
-      
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
