--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -37,13 +37,22 @@ dockers_v2:
       - "{{.Version}}"
       - latest
     dockerfile: Dockerfile
+    labels:
+      org.opencontainers.image.created: "{{.Date}}"
+      org.opencontainers.image.name: "{{.ProjectName}}"
+      org.opencontainers.image.revision: "{{.FullCommit}}"
+      org.opencontainers.image.version: "{{.Version}}"
+      org.opencontainers.image.source: "{{.GitURL}}"
+      org.opencontainers.image.description: "simple DNS mocker"
+    annotations:
+      "index:org.opencontainers.image.description": "simple DNS mocker"
     platforms:
       - linux/amd64
       - linux/arm64
       - linux/arm/v6
       - linux/arm/v7
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 snapshot:
   version_template: "{{ .Tag }}-SNAPSHOT"
 changelog:
@@ -51,5 +60,5 @@ changelog:
   sort: asc
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
+      - "^docs:"
+      - "^test:"
